# olli_avs_device_sdk

ACL/src/Transport/: DownchannelHandler.cpp  MessageRequestHandler.cpp
KWD/KWDProvider/src/: KeywordDetectorProvider.cpp
KWD/Sensory/include/Sensory/: SensoryKeywordDetector.h
KWD/Sensory/olli/6.11.0/: snsr.h
KWD/Sensory/olli/6.12.0/: snsr.h
KWD/Sensory/olli/6.13.1/: snsr.h
KWD/Sensory/olli/6.16.0/: snsr.h
KWD/Sensory/src/: CMakeLists.txt  SensoryKeywordDetector.cpp
KWD/src/: AbstractKeywordDetector.cpp
MediaPlayer/GStreamerMediaPlayer/src/: BaseStreamSource.cpp  MediaPlayer.cpp
SampleApp/: CMakeLists.txt
SampleApp/include/SampleApp/: PortAudioMicrophoneWrapper.h  UserInputManager.h  olli_alexa.h
SampleApp/src/: CMakeLists.txt  KeywordObserver.cpp  PortAudioMicrophoneWrapper.cpp  UIManager.cpp  UserInputManager.cpp  olli_alexa.cpp
cmakeBuild/: BuildDefaults.cmake
cmakeBuild/cmake/: BuildOptions.cmake  PortAudio.cmake  PrepareInstall.cmake
core/Authorization/acsdkAuthorization/src/LWA/: LWAAuthorizationConfiguration.cpp
tools/Install/: AlexaClientSDKConfig.json  config.json  full_config.json  genConfig.sh
